# AutoRecLab-Group01

./: .gitignore  Dockerfile  README.md  compose.yaml  config.py  config.toml  d  docker-entrypoint.sh  fluent_langchain_query_demo.py  main.py  pyproject.toml  viz.py
cli/embeddings/: main.py  preprocessor.py
sandbox/: code_requirements.json  save.pkl
sandbox/workspace/Hilf-Skript/: convert.py
treesearch/: function_specs.py  interpreter.py  minimal_agent.py  node.py  search.py  type_checker.py
treesearch/backend/: utils.py
treesearch/llm/: query.py  recovery.py
treesearch/mcp/: docs_search_server.py  test_server.py
treesearch/utils/: response.py
