[project]
name = "isg-science-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.68.0",
    "anytree>=2.13.0",
    "backoff>=2.2.1",
    "black>=25.9.0",
    "dataclasses-json>=0.6.7",
    "dataloader",
    "faiss-cpu>=1.13.2",
    "funcy>=2.0",
    "graphviz>=0.21",
    "humanize>=4.13.0",
    "jsonschema>=4.25.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.6",
    "langchain-text-splitters>=1.1.0",
    "lenskit==0.14.4",
    "matplotlib>=3.10.7",
    "mcp[cli]>=1.25.0",
    "numpy>=1.26.4",
    "openai>=1.108.1",
    "pydantic-settings>=2.10.1",
    "pytest>=9.0.2",
    "rich>=14.1.0",
    "scikit-learn==1.7.1",
    "shutup>=0.2.0",
    "tomli-w>=1.2.0",
]

[project.scripts]
embeddings = "cli.embeddings.main:main"

[tool.uv.workspace]
members = ["packages/dataloader"]

[tool.uv]
package = true

[tool.uv.sources]
dataloader = { workspace = true, editable = true }

[tool.setuptools]
packages = ["cli", "treesearch", "utils"]
